--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Paul Vorbach <paul@vorb.de> (http://vorb.de/)",
   "name": "esc",
   "description": "escapes HTML",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "git://github.com/pvorb/node-esc.git"
@@ -11,8 +11,13 @@
   "engines": {
     "node": "*"
   },
-  "tags": [ "html", "escape" ],
+  "tags": [
+    "html",
+    "escape"
+  ],
   "dependencies": {
     "append": ">=0.1.1"
-  }
+  },
+  "devDependencies": {},
+  "optionalDependencies": {}
 }
